# PhaseSim

./: .gitignore  CMakeLists.txt  environment.yml
conf/: test.yml
docs/: SimPoint.md
notebooks/: 2019-09-18 Test.ipynb  2019-10-01 Plot ROC.ipynb  2019-10-02 Plot LLC access histograms.ipynb
policies/branch/: bimodal.bpred  gshare.bpred  hashed_perceptron.bpred  perceptron.bpred
policies/prefetcher/: ip_stride.l2c_pref  kpcp.l2c_pref  l2c_prefetcher.cc  next_line.l1d_pref  next_line.l2c_pref  next_line.llc_pref  no.l1d_pref  no.llc_pref  spp_dev.l2c_pref
policies/replacement/: base_replacement.cc  drrip.llc_repl  lru.llc_repl  ship.llc_repl  srrip.llc_repl
python/: setup.py
python/phasesim/: __init__.py  constants.py  metrics.py  parse.py  plot.py
python/phasesim/scripts/: pin.py  run.py  simpoint.py  trace.py
ref/pintools/tracer/: tracer.cpp
ref/spec/: gcc-mixed_asm_C.cfg
ref/tools/: hasty.cc  hasty_cache.cc  hasty_phase.cc  instruction_size.cc  llc_access_histogram.cc  size.cc  tdb.cc
scripts/: download_dpc3_traces.sh  dpc3_max_simpoint.txt  install.sh
scripts/spec/: invoke.sh  simpoint.sh
src/: BBVPhaseDetector.h  BCPhaseDetector.h  BranchCounterPhaseDetector.h  CPIPhaseDetector.h  IWSPhaseDetector.h  PhaseDetector.h  PhaseManager.cc  PhaseManager.h  block.cc  block.h  cache.cc  cache.h  champsim.h  dram_controller.cc  dram_controller.h  instruction.h  kpcp.h  main.cc  memory_class.h  ooo_cpu.cc  ooo_cpu.h  set.h  spp_dev.h  uncore.h  utils.cc  utils.h
